[package]
name = "redmine-new-branch"
version = "0.1.0"
authors = ["François Rieucau <frieucau@wallix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
reqwest = { version = "0.10" , features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.13"

# For the interractive menu https://github.com/mitsuhiko/dialoguer
dialoguer = "0.5.1"
